--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 # Project name (required)
-name=My Addon
+name=Tweaker
 
 minecraft_version = 1.5.2
 yarn_mappings = 1.5.2+build.202201092137
 loader_version = 1.0.0
 
-mod_version = 1.0.0
-maven_group = net.fabricmc
-archives_base_name = fabric-example-mod
+mod_version = 1.3.0
+maven_group = issame
+archives_base_name = tweaker
